Correction Bug Contact version Mobile

--- a/src/src/ConstructionsIncongrues/ComThibaultHuertasWwwBundle/Resources/public/sass/screen.scss
+++ b/src/src/ConstructionsIncongrues/ComThibaultHuertasWwwBundle/Resources/public/sass/screen.scss
@@ -37,7 +37,7 @@ a { text-decoration: none; }
   header section, .mosaic,  #projets, footer section { margin: auto; max-width: 510px; }
   section .intro { display: none; }
   #contact div { display: none; }
-  #contact address { display: inline; position: relative;float:left;top:13px; }
+  #contact address { display: inline; position: relative;float:left;top:28px; }
   #contact { height: 60px;padding: 10px; }
   #contact span { height: 40px;float:right;}
   header ul { clear: both; float: left; width: 100%; }
